# rclone_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: build_and_test.yml  conan-test.yml
include/: rclone.hpp  rclone_cpp.hpp  rclone_file.hpp  rclone_remote.hpp
include/iridium/: about.hpp  entities.hpp  file.hpp  options.hpp  parsers.hpp  process.hpp  rclone.hpp  rclone_about.hpp  rclone_cpp.hpp  rclone_file.hpp  rclone_remote.hpp  remote.hpp  size.hpp
include/iridium/entities/: about.hpp  entitie.hpp  entity.hpp  file.hpp  json_log.hpp  remote.hpp  size.hpp  version.hpp
include/iridium/options/: basic_option.hpp  filter.hpp  listing.hpp  logging.hpp  performance.hpp  tree.hpp
include/iridium/parsers/: about_parser.hpp  basic_parser.hpp  file_parser.hpp  json_log_parser.hpp  parser.hpp  remote_parser.hpp  size_parser.hpp  version_parser.hpp
include/iridium/process/: config_create.hpp  process.hpp  process_pool.hpp
include/iridium/rclone_cpp/: file.hpp  process.hpp  remote.hpp
src/: RcloneFile.cpp  RcloneFile.hpp  Remote.cpp  Remote.hpp  about.cpp  file.cpp  options.cpp  process.cpp  rclone.cpp  rclone.hpp  rclone_about.cpp  rclone_file.cpp  rclone_file.hpp  rclone_remote.cpp  rclone_remote.hpp  remote.cpp  size.cpp
src/entities/: about.cpp  file.cpp  json_log.cpp  remote.cpp  size.cpp  version.cpp
src/options/: basic_option.cpp  option.cpp  options.cpp
src/parsers/: about_parser.cpp  file_parser.cpp  json_log_parser.cpp  remote_parser.cpp  size_parser.cpp  utils.cpp  utils.hpp  version_parser.cpp
src/process/: config_create.cpp  process.cpp  process_impl.cpp  process_pool.cpp  process_pool_impl.cpp
src/rclone_cpp/: file.cpp  process.cpp  remote.cpp
test/: rclone_file_test.cpp  rclone_remote_test.cpp  remote_test.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: rclone_file_test.cpp  rclone_json_log_test.cpp  rclone_process_pool_test.cpp  rclone_process_test.cpp  rclone_remote_test.cpp  test.cpp
tests/: CMakeLists.txt  rclone_file_test.cpp  rclone_remote_test.cpp  test.cpp
